[fix] 엑셀 다운로드 리펙토링